Add missing folders

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -4,6 +4,14 @@ WORKDIR /app
 
 COPY requirements.txt ./
 RUN pip install --no-cache-dir -r requirements.txt
+# Install python-dotenv for environment variable support
+RUN pip install --no-cache-dir python-dotenv
+
+# Copy config if needed (uncomment if config.py is required)
+# COPY ./backend/config.py ./backend/config.py
+
+# Use Uvicorn in production mode
+# CMD ["uvicorn", "backend.main:app", "--host", "0.0.0.0", "--port", "8000", "--proxy-headers", "--forwarded-allow-ips", "*"]
 
 COPY ./backend ./backend
 
