--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -31,13 +31,21 @@ http {
         listen 443 ssl;
         server_name cryptomaltese.com;
 
-        ssl_certificate /etc/letsencrypt/live/cryptomaltese.com/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/cryptomaltese.com/privkey.pem;
+        ssl_certificate /etc/letsencrypt/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/privkey.pem;
         ssl_protocols TLSv1.2 TLSv1.3;
         ssl_ciphers HIGH:!aNULL:!MD5;
 
         location /api/ {
             proxy_pass http://backend:8000/api/;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
+	location /docs {
+            proxy_pass http://backend:8000/docs;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -52,7 +60,15 @@ http {
             proxy_set_header X-Forwarded-Proto $scheme;
         }
 
-        location / {
+        location /openapi.json {
+ 	   proxy_pass http://backend:8000/openapi.json;
+    	   proxy_set_header Host $host;
+    	   proxy_set_header X-Real-IP $remote_addr;
+    	   proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    	   proxy_set_header X-Forwarded-Proto $scheme;
+	}
+
+	location / {
             return 404;
         }
     }
