--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,40 @@
-fastapi>=0.95.0
-uvicorn[standard]>=0.22.0
-pydantic>=1.10.0
-python-dotenv>=1.0.0
-transformers>=4.30.0
-huggingface-hub>=0.15.0
-safetensors>=0.3.0
-loguru>=0.7.0
-httpx>=0.24.0
-python-multipart>=0.0.6 
+annotated-types==0.7.0
+anyio==4.9.0
+certifi==2025.7.14
+charset-normalizer==3.4.2
+click==8.1.8
+exceptiongroup==1.3.0
+fastapi==0.116.1
+filelock==3.18.0
+fsspec==2025.7.0
+h11==0.16.0
+hf-xet==1.1.5
+httpcore==1.0.9
+httptools==0.6.4
+httpx==0.28.1
+huggingface-hub==0.33.4
+idna==3.10
+loguru==0.7.3
+numpy==2.0.2
+packaging==25.0
+pydantic==2.11.7
+pydantic-core==2.33.2
+pydantic-settings==2.10.1
+python-dotenv==1.1.1
+python-multipart==0.0.20
+PyYAML==6.0.2
+regex==2024.11.6
+requests==2.32.4
+safetensors==0.5.3
+sniffio==1.3.1
+starlette==0.47.1
+tokenizers==0.21.2
+tqdm==4.67.1
+transformers==4.53.2
+typing-extensions==4.14.1
+typing-inspection==0.4.1
+urllib3==2.5.0
+uvicorn==0.35.0
+uvloop==0.21.0
+watchfiles==1.1.0
+websockets==15.0.1
