--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -42,14 +42,20 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_read_timeout 600s;
+            proxy_connect_timeout 600s;
+            proxy_send_timeout 600s;
         }
 
-	location /docs {
+        location /docs {
             proxy_pass http://backend:8000/docs;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_read_timeout 600s;
+            proxy_connect_timeout 600s;
+            proxy_send_timeout 600s;
         }
 
         location /docs/ {
@@ -58,17 +64,23 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_read_timeout 600s;
+            proxy_connect_timeout 600s;
+            proxy_send_timeout 600s;
         }
 
         location /openapi.json {
- 	   proxy_pass http://backend:8000/openapi.json;
-    	   proxy_set_header Host $host;
-    	   proxy_set_header X-Real-IP $remote_addr;
-    	   proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    	   proxy_set_header X-Forwarded-Proto $scheme;
-	}
+           proxy_pass http://backend:8000/openapi.json;
+           proxy_set_header Host $host;
+           proxy_set_header X-Real-IP $remote_addr;
+           proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+           proxy_set_header X-Forwarded-Proto $scheme;
+           proxy_read_timeout 600s;
+           proxy_connect_timeout 600s;
+           proxy_send_timeout 600s;
+        }
 
-	location / {
+        location / {
             return 404;
         }
     }
