--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ idna==3.10
 loguru==0.7.3
 numpy==2.0.2
 packaging==25.0
+peft==0.14.0
 pydantic==2.11.7
 pydantic-core==2.33.2
 pydantic-settings==2.10.1
@@ -29,6 +30,7 @@ safetensors==0.5.3
 sniffio==1.3.1
 starlette==0.47.1
 tokenizers==0.21.2
+torch==2.5.0
 tqdm==4.67.1
 transformers==4.53.2
 typing-extensions==4.14.1
