--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ loguru==0.7.3
 numpy==2.0.2
 packaging==25.0
 peft==0.14.0
+protobuf>=3.20.0
 pydantic==2.11.7
 pydantic-core==2.33.2
 pydantic-settings==2.10.1
@@ -27,6 +28,7 @@ PyYAML==6.0.2
 regex==2024.11.6
 requests==2.32.4
 safetensors==0.5.3
+sentencepiece>=0.1.99
 sniffio==1.3.1
 starlette==0.47.1
 tokenizers==0.21.2
