--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -42,9 +42,9 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
-            proxy_read_timeout 600s;
-            proxy_connect_timeout 600s;
-            proxy_send_timeout 600s;
+            proxy_read_timeout 1200s;  # Increased to 20 minutes
+            proxy_connect_timeout 1200s;  # Increased to 20 minutes
+            proxy_send_timeout 1200s;  # Increased to 20 minutes
         }
 
         location /docs {
