--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -14,7 +14,10 @@ RUN pip install --no-cache-dir python-dotenv
 # CMD ["uvicorn", "backend.main:app", "--host", "0.0.0.0", "--port", "8000", "--proxy-headers", "--forwarded-allow-ips", "*"]
 
 COPY ./backend ./backend
+COPY run_server.py ./
+COPY setup_server.py ./
 
 EXPOSE 8000
 
-CMD ["uvicorn", "backend.main:app", "--host", "0.0.0.0", "--port", "8000"] 
+# Use the improved main application for production
+CMD ["uvicorn", "backend.main_improved:app", "--host", "0.0.0.0", "--port", "8000"] 
